--- a/index.html
+++ b/index.html
@@ -5,38 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>提案資料 - 株式会社GRT</title>
     <style>
-        body, html { margin: 0; padding: 0; background: #000; overflow: hidden; font-family: "Helvetica Neue", Arial, sans-serif; }
-        /* スライドのスクロール設定 */
-        .container {
-            width: 100vw; height: 100vh;
-            overflow-y: scroll; scroll-snap-type: y mandatory;
-        }
-        .slide {
-            width: 100vw; height: 100vh;
-            scroll-snap-align: start;
-            position: relative; display: flex; justify-content: center; align-items: center;
-        }
-        /* スライド画像 (1.jpg〜10.jpg) */
-        .bg-img {
-            position: absolute; top: 0; left: 0; width: 100%; height: 100%;
-            object-fit: contain; z-index: 1;
-        }
-        /* 動画のスタイル */
-        video {
-            position: relative; z-index: 2; max-width: 60%;
-            border-radius: 10px; box-shadow: 0 15px 40px rgba(0,0,0,0.5);
-        }
-        /* 開始オーバーレイ */
-        #overlay {
-            position: fixed; top:0; left:0; width:100%; height:100%;
-            background: rgba(0,0,0,0.9); z-index: 100;
-            display: flex; flex-direction: column; justify-content: center; align-items: center; color: white;
-        }
-        button {
-            padding: 18px 45px; font-size: 1.2rem; cursor: pointer;
-            background: #00a0e9; color: white; border: none; border-radius: 30px;
-            box-shadow: 0 4px 15px rgba(0,160,233,0.4);
-        }
+        body, html { margin: 0; padding: 0; background: #000; overflow: hidden; font-family: sans-serif; }
+        .container { width: 100vw; height: 100vh; overflow-y: scroll; scroll-snap-type: y mandatory; }
+        .slide { width: 100vw; height: 100vh; scroll-snap-align: start; position: relative; display: flex; justify-content: center; align-items: center; }
+        .bg-img { position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: contain; z-index: 1; }
+        video { position: relative; z-index: 2; max-width: 60%; border-radius: 10px; }
+        #overlay { position: fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.9); z-index: 100; display: flex; flex-direction: column; justify-content: center; align-items: center; color: white; }
+        button { padding: 18px 45px; font-size: 1.2rem; cursor: pointer; background: #00a0e9; color: white; border: none; border-radius: 30px; }
     </style>
 </head>
 <body>
@@ -55,8 +30,8 @@
 
     <section class="slide">
         <img src="2.jpg" class="bg-img">
-        <video src="メディア1.mp4" muted></video>
-        </section>
+        <video src="メディア1.mp4" muted playsinline></video>
+    </section>
 
     <section class="slide"><img src="3.jpg" class="bg-img"></section>
     <section class="slide"><img src="4.jpg" class="bg-img"></section>
@@ -69,9 +44,13 @@
 </div>
 
 <script>
-    function start() { document.getElementById('overlay').style.display = 'none'; }
+    function start() {
+        document.getElementById('overlay').style.display = 'none';
+        // 最初のスライドの音声を再生
+        const firstAudio = document.querySelector('audio');
+        if(firstAudio) firstAudio.play();
+    }
 
-    // スライドが表示されたら再生、消えたら停止する仕組み
     const observer = new IntersectionObserver((entries) => {
         entries.forEach(entry => {
             const v = entry.target.querySelector('video');
@@ -79,4 +58,13 @@
             if (entry.isIntersecting) {
                 if(v) v.play(); if(a) a.play();
             } else {
-                if(v) { v.pause(); v.currentTime =
+                if(v) { v.pause(); v.currentTime = 0; }
+                if(a) { a.pause(); a.currentTime = 0; }
+            }
+        });
+    }, { threshold: 0.6 });
+
+    document.querySelectorAll('.slide').forEach(s => observer.observe(s));
+</script>
+</body>
+</html>
