--- a/index.html
+++ b/index.html
@@ -6,12 +6,36 @@
     <title>提案資料 - 株式会社GRT</title>
     <style>
         body, html { margin: 0; padding: 0; background: #000; overflow: hidden; font-family: sans-serif; }
-        .container { width: 100vw; height: 100vh; overflow-y: scroll; scroll-snap-type: y mandatory; }
-        .slide { width: 100vw; height: 100vh; scroll-snap-align: start; position: relative; display: flex; justify-content: center; align-items: center; }
-        .bg-img { position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: contain; z-index: 1; }
-        video { position: relative; z-index: 2; max-width: 60%; border-radius: 10px; }
-        #overlay { position: fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.9); z-index: 100; display: flex; flex-direction: column; justify-content: center; align-items: center; color: white; }
-        button { padding: 18px 45px; font-size: 1.2rem; cursor: pointer; background: #00a0e9; color: white; border: none; border-radius: 30px; }
+        /* スライドのスクロール設定 */
+        .container {
+            width: 100vw; height: 100vh;
+            overflow-y: scroll; scroll-snap-type: y mandatory;
+        }
+        .slide {
+            width: 100vw; height: 100vh;
+            scroll-snap-align: start;
+            position: relative; display: flex; justify-content: center; align-items: center;
+        }
+        /* 背景スライド画像 */
+        .bg-img {
+            position: absolute; top: 0; left: 0; width: 100%; height: 100%;
+            object-fit: contain; z-index: 1;
+        }
+        /* 動画のスタイル */
+        video {
+            position: relative; z-index: 2; max-width: 60%;
+            border-radius: 10px; box-shadow: 0 15px 40px rgba(0,0,0,0.5);
+        }
+        /* 開始ボタン（ブラウザの自動再生制限対策） */
+        #overlay {
+            position: fixed; top:0; left:0; width:100%; height:100%;
+            background: rgba(0,0,0,0.9); z-index: 100;
+            display: flex; flex-direction: column; justify-content: center; align-items: center; color: white;
+        }
+        button {
+            padding: 18px 45px; font-size: 1.2rem; cursor: pointer;
+            background: #00a0e9; color: white; border: none; border-radius: 30px;
+        }
     </style>
 </head>
 <body>
@@ -34,8 +58,14 @@
     </section>
 
     <section class="slide"><img src="3.jpg" class="bg-img"></section>
+    
     <section class="slide"><img src="4.jpg" class="bg-img"></section>
-    <section class="slide"><img src="5.jpg" class="bg-img"></section>
+
+    <section class="slide">
+        <img src="5.jpg" class="bg-img">
+        <audio src="7188360124250015.mp3"></audio>
+    </section>
+
     <section class="slide"><img src="6.jpg" class="bg-img"></section>
     <section class="slide"><img src="7.jpg" class="bg-img"></section>
     <section class="slide"><img src="8.jpg" class="bg-img"></section>
@@ -44,27 +74,35 @@
 </div>
 
 <script>
+    // プレゼン開始ボタンを押した時の動作
     function start() {
         document.getElementById('overlay').style.display = 'none';
-        // 最初のスライドの音声を再生
-        const firstAudio = document.querySelector('audio');
+        // 1枚目のスライドに音声がある場合は再生
+        const firstAudio = document.querySelector('.slide audio');
         if(firstAudio) firstAudio.play();
     }
 
+    // 各スライドが画面に入った時に再生、出た時に停止・リセット
     const observer = new IntersectionObserver((entries) => {
         entries.forEach(entry => {
             const v = entry.target.querySelector('video');
             const a = entry.target.querySelector('audio');
+            
             if (entry.isIntersecting) {
-                if(v) v.play(); if(a) a.play();
+                // スライドが表示されたら再生
+                if(v) v.play(); 
+                if(a) a.play();
             } else {
+                // スライドが隠れたら停止して巻き戻し
                 if(v) { v.pause(); v.currentTime = 0; }
                 if(a) { a.pause(); a.currentTime = 0; }
             }
         });
-    }, { threshold: 0.6 });
+    }, { threshold: 0.6 }); // スライドが60%以上見えたら発火
 
+    // すべてのスライドを監視対象に設定
     document.querySelectorAll('.slide').forEach(s => observer.observe(s));
 </script>
+
 </body>
 </html>
